Update informations for portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,25 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
-
+	<header class="header">
+		<h1>Eclipsdius</h1>
+		<h2>Web integrator</h2>
+	</header>
+	<div class="tagLine">
+		<h3>Learn More About Me</h3>
+		<p>My biggest hobby is video games. I'm also a passionate web integrator who love learning computing programmation especially front-end development. I prefer Javascript language</p>
+	</div>
+	<div class="skills">
+		<h3>My skills</h3>
+		<ul>
+			<li>HTML/CSS</li>
+			<li>Javascript</li>
+			<li>PHP</li>
+		</ul>
+	</div>
+	<div class="contact">
+		<h3>Contact me:</h3>
+		<a href="https://github.com/eclipsedius" target="_blank">My Github for CodeSchool</a>
+	</div>
 </body>
 </html>
