--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 	</div>
 	<div class="contact">
 		<h3>Contact me:</h3>
-		<a href="https://github.com/eclipsedius" target="_blank">My Github for CodeSchool</a>
+		<p>You can contact me in: <a href="https://github.com/eclipsedius" target="_blank">my Github for CodeSchool</a></p>
 	</div>
 </body>
 </html>
