--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 	</div>
 	<div class="skills">
 		<h3>My skills</h3>
+		<p>I love front-end development</p>
 		<ul>
 			<li>HTML/CSS</li>
 			<li>Javascript</li>
